some info added

--- a/index.html
+++ b/index.html
@@ -10,12 +10,16 @@
 </head>
 
 <body>
-    <h2 style="text-align: center;margin-bottom: 0;">All Countries</h2>
-    <hr style="width: 200px;height: 4px;background-color: black;">
-    <div id="countries" class="countries">
-       
-    </div>
+    <header>
+        <h2 style="text-align: center;margin-bottom: 0;">All Countries</h2>
+        <hr style="width: 200px;height: 4px;background-color: black;">
+    </header>
+    <main>
+        <div id="countries" class="countries">
 
+        </div>
+
+    </main>
 
 
     <script src="app.js"></script>
